Edited a lot of parts of the web

--- a/chess/index.html
+++ b/chess/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 
-<title>chess.com Daily Puzzle</title>
+<html>
 
-<body bgcolor="#240"></body>
+<head>
+    <title>chess.com Daily Puzzle</title>
+</head>
 
-<iframe src="https://www.chess.com/daily_puzzle" height="560" width="400" frameborder="0"></iframe>
-<style>
-    iframe {
-        display: block;
-        margin: auto;
-    }
-</style>
+<body bgcolor="#240">
+    <div>
+        <iframe src="https://www.chess.com/daily_puzzle" height="560" width="400" frameborder="0"></iframe>
+    </div>
+
+    <style>
+        div {
+            display: grid;
+            place-items: center;
+        }
+    </style>
+</body>
+
+</html>
