--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 </head>
 
 <body>
-    <a class="piano" href="piano/index.html">
-        Piano
-    </a>
+    <div>
+        <button class="art" onclick="window.location.href='art/index.html'">ART</button>
+        <button class="botw" onclick="window.location.href='botw/index.html'">BOTW</button>
+        <button class="calendar" onclick="window.location.href='calendar/index.html'">CALENDAR</button>
+        <button class="chess" onclick="window.location.href='chess/index.html'">CHESS</button>
+        <button class="games" onclick="window.location.href='games/index.html'">GAMES</button>
+        <button class="knitting" onclick="window.location.href='knitting/index.html'">KNITTING</button>
+        <button class="links" onclick="window.location.href='links/index.html'">LINKS</button>
+        <button class="music" onclick="window.location.href='music/index.html'">MUSIC</button>
+        <button class="piano" onclick="window.location.href='piano/index.html'">PIANO</button>
+        <button class="recipes" onclick="window.location.href='recipes/index.html'">RECIPES</button>
+        <button class="series" onclick="window.location.href='series/index.html'">SERIES</button>
+        <button class="undertale" onclick="window.location.href='undertale/index.html'">UNDERTALE</button>
+    </div>
+
+    <a class="heart" href="love-function/index.html">♡</a>
+    <p class="footer">
+        This is a non-profit web. Credits to all of the artists that own the media used in this web.
+    </p>
 </body>
 
 </html>
