--- a/music/index.html
+++ b/music/index.html
@@ -3,41 +3,20 @@
 <html>
 
 <head>
-  <title>Kare's Lists</title>
+  <title>Music</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
   <script src="script.js" type="text/javascript"></script>
 </head>
 
-<section class="music-artists">
-  <img src="media/music/minami/amewomatsu.png">
-  <img src="media/music/minami/drop.png">
-  <img src="media/music/minami/emotional_water.png">
-  <img src="media/music/minami/eternal_blue.png">
-  <img src="media/music/minami/main_actor.png">
-  <img src="media/music/minami/rude_lose_dance.png">
-</section>
-
-<section class="nrqse">
-
-</section>
-
-<section class="mafumafu">
-
-</section>
-
-<section class="soraru">
-
-</section>
-
-<table>
-  <tr>
-    <td>Assassination Classroom</td>
-    <td>Seen</td>
-  </tr>
-  <tr>
-    <td>Sword Art Online</td>
-    <td>T3+ not seen</td>
-  </tr>
-</table>
+<body>
+  <section class="minami">
+    <img src="media/minami/amewomatsu.png">
+    <img src="media/minami/drop.png">
+    <img src="media/minami/emotional_water.png">
+    <img src="media/minami/eternal_blue.png">
+    <img src="media/minami/main_actor.png">
+    <img src="media/minami/rude_lose_dance.png">
+  </section>
+</body>
 
 </html>
