--- a/undertale/index.html
+++ b/undertale/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
+<html>
 
-<title>Undertale & Deltarune Soundtracks</title>
+<head>
+    <title>Undertale & Deltarune Soundtracks</title>
+</head>
 
-<body bgcolor="#000"></body>
+<body bgcolor="#000">
+    <div align="middle">
+        <iframe style="border: 0; width: 350px; height: 786px;"
+            src="https://bandcamp.com/EmbeddedPlayer/album=2955245981/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
+        <iframe style="border: 0; width: 350px; height: 786px;"
+            src="https://bandcamp.com/EmbeddedPlayer/album=4122870521/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
+        <iframe style="border: 0; width: 350px; height: 786px;"
+            src="https://bandcamp.com/EmbeddedPlayer/album=2511184890/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
+    </div>
+</body>
 
-<div align="middle">
-    <iframe style="border: 0; width: 350px; height: 786px;"
-        src="https://bandcamp.com/EmbeddedPlayer/album=2955245981/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
-    <iframe style="border: 0; width: 350px; height: 786px;"
-        src="https://bandcamp.com/EmbeddedPlayer/album=4122870521/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
-    <iframe style="border: 0; width: 350px; height: 786px;"
-        src="https://bandcamp.com/EmbeddedPlayer/album=2511184890/size=large/bgcol=333333/linkcol=ffffff/transparent=true/"></iframe>
-</div>
+</html>
