target="_blank" in series (currently)

--- a/series/index.html
+++ b/series/index.html
@@ -24,7 +24,7 @@
         <th>Currently watching/reading</th>
     </tr>
     <tr>
-        <td><a href="https://dynasty-scans.com/series/kase_san">Kase-san</a></td>
+        <td><a href="https://dynasty-scans.com/series/kase_san" target="_blank">Kase-san</a></td>
     </tr>
     <tr>
         <td><a href="https://dynasty-scans.com/series/yamada_to_kase_san">Yamada to Kase-san</a></td>
