--- a/music/index.html
+++ b/music/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <head>
   <title>Music</title>
@@ -9,13 +8,15 @@
 </head>
 
 <body>
-  <section class="minami">
-    <img src="media/minami/amewomatsu.png">
-    <img src="media/minami/drop.png">
-    <img src="media/minami/emotional_water.png">
-    <img src="media/minami/eternal_blue.png">
-    <img src="media/minami/main_actor.png">
-    <img src="media/minami/rude_lose_dance.png">
+  <section class="media">
+    <img src="media/drop.png">
+    <img src="media/rude_lose_dance.png">
+    <img src="media/drop.png">
+    <img src="media/rude_lose_dance.png">
+    <img src="media/drop.png">
+    <img src="media/rude_lose_dance.png">
+    <img src="media/drop.png">
+    <img src="media/rude_lose_dance.png">
   </section>
 </body>
 
