--- a/music/index.html
+++ b/music/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <section class="media">
-    <img class="cover_1" src="media/minami.png">
-    <img class="cover_2" src="media/minami.png">
-    <img class="cover_3" src="media/minami.png">
-    <img class="cover_4" src="media/minami.png">
-    <img class="cover_5" src="media/minami.png">
-    <img class="cover_6" src="media/minami.png">
-    <img class="cover_7" src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
+    <img src="media/minami.png">
   </section>
 </body>
 
