--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<html>
+    <head>
+        <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css" type="text/css">
+    </head>
+    <body>
+        
+    </body>
+</html>
