--- a/recipes/index.html
+++ b/recipes/index.html
@@ -2,11 +2,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <html>
-    <head>
-        <title>Recipes</title>
-        <link rel="stylesheet" href="styles.css" type="text/css">
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+</head>
+
+<body>
+    <table>
+        <tr>
+            <th>Product</th>
+            <th>Ingredients</th>
+            <th>Steps</th>
+        </tr>
+    </table>
+    <script src="script.js" type="text/javascript"></script>
+</body>
+
 </html>
