--- a/links/index.html
+++ b/links/index.html
@@ -2,11 +2,71 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <html>
-    <head>
-        <title>Saved Links</title>
-        <link rel="stylesheet" href="styles.css" type="text/css">
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>Saved Links</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+</head>
+
+<body>
+    <button onclick="window.location.href='https://www.youtube.com/watch?v=ECWg4AglhKI'">
+        Como Eliminar Carpetas Imposibles De Borrar En Windows SIN PROGRAMAS
+    </button>
+    <button onclick="window.location.href='https://www.youtube.com/watch?v=JicAZrsSdmA'">
+        Piratear Wii | Instalar Homebrew Channel y cIOS de Waninkoko | Hackear Wii sin chip
+    </button>
+    <button onclick="window.location.href='https://www.youtube.com/watch?v=Fh1tSKXUNS0'">
+        How To Fix A Semi-Bricked Wii Easily (using AnyRegion Changer)
+    </button>
+    <button onclick="window.location.href='https://play.google.com/store/apps/details?id=io.walletpasses.android'">
+        WalletPasses | Passbook Wallet (.pkpass reader app)
+    </button>
+    <button onclick="window.location.href='https://apod.nasa.gov/apod/archivepix.html'">
+        NASA Astronomy Picture of the Day Archive
+    </button>
+    <button onclick="window.location.href='https://www.nasa.gov/multimedia/imagegallery/iotd.html'">
+        NASA Image of the Day
+    </button>
+    <button onclick="window.location.href='https://youtube.com/shorts/xnVykQ3x1qU'">
+        Google Search Tips
+    </button>
+    <button onclick="window.location.href='https://downloads.khinsider.com'">
+        Video Game Music archive
+    </button>
+    <button onclick="window.location.href='http://www.falstad.com/qmatom/qmatom.html'">
+        Hydrogen Atom Applet
+    </button>
+    <button onclick="window.location.href='https://wii.scenebeta.com'">
+        WiiSceneBeta
+    </button>
+    <button onclick="window.location.href='https://vimm.net/vault/Wii'">
+        Vimm
+    </button>
+    <button onclick="window.location.href='http://www.wiiiso.com'">
+        WiiISO
+    </button>
+    <button onclick="window.location.href='https://archive.org'">
+        Wayback Machine
+    </button>
+    <button onclick="window.location.href='https://archive.org/web'">
+        Wayback Machine (Web specific)
+    </button>
+    <button onclick="window.location.href='http://nekit.sytes.net/files/gems'">
+        All Steven Universe Episodes
+    </button>
+    <button onclick="window.location.href='https://www.youtube.com/@rwby4k8k'">
+        RWBY 4K/8K
+    </button>
+    <button onclick="window.location.href='https://old.reddit.com/'">
+        Old Reddit
+    </button>
+    <button onclick="window.location.href='https://jisho.org/'">
+        Japanese-English translator
+    </button>
+    <button
+        onclick="window.location.href='https://www.reddit.com/r/Naruto/comments/k2lsxi/ultimate_guide_to_watch_naruto'">
+        Naruto watching guide
+    </button>
+</body>
+
 </html>
