--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,14 +9,57 @@
 </head>
 
 <body>
-    <table>
-        <tr>
-            <th>Product</th>
-            <th>Ingredients</th>
-            <th>Steps</th>
-        </tr>
-    </table>
-    <script src="script.js" type="text/javascript"></script>
+    <dl id="curry_rice">
+        <dt>Curry Rice</dt>
+        <dd>Curry Sauce</dd>
+        <dd>Basmati Rice</dd>
+        <dd>Chicken or Turkey</dd>
+        <dt>Steps</dt>
+        <dd>1.</dd>
+        <dd>2.</dd>
+        <dd>3.</dd>
+    </dl>
+    <dl id="curry_sauce">
+        <dt>Curry Sauce</dt>
+        <dd>Mayonaise (Olive)</dd>
+        <dd>Curry</dd>
+        <dd>Olive Oil</dd>
+        <dd>Salt</dd>
+        <dd>Basil</dd>
+        <dt>Steps</dt>
+        <dd>1.</dd>
+        <dd>2.</dd>
+        <dd>3.</dd>
+    </dl>
+    <dl id="tea_cakes">
+        <dt>Tea Cakes</dt>
+        <dd>Flour</dd>
+        <dt>Steps</dt>
+        <dd>1.</dd>
+        <dd>2.</dd>
+        <dd>3.</dd>
+    </dl>
+    <dl id="tortilla_de_patata">
+        <dt>Tortilla de Patatas</dt>
+        <dd>Potato</dd>
+        <dd>Eggs</dd>
+        <dd>Olive Oil</dd>
+        <dd>Salt</dd>
+        <dt>Steps</dt>
+        <dd>1. Pour some oil over a pan.</dd>
+        <dd>2.</dd>
+        <dd>3.</dd>
+    </dl>
+    <dl id="fried_rice">
+        <dt>Fried Rice</dt>
+        <dd>Basmati Rice</dd>
+        <dd>Olive Oil</dd>
+        <dd>Salt</dd>
+        <dt>Steps</dt>
+        <dd>1.</dd>
+        <dd>2.</dd>
+        <dd>3.</dd>
+    </dl>
 </body>
 
 </html>
