--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div>
-        <button class="art" onclick="window.location.href='art/index.html'">ART</button>
-        <button class="botw" onclick="window.location.href='botw/index.html'">BOTW</button>
-        <button class="calendar" onclick="window.location.href='calendar/index.html'">CALENDAR</button>
-        <button class="links" onclick="window.location.href='links/index.html'">LINKS</button>
-        <button class="music" onclick="window.location.href='music/index.html'">MUSIC</button>
-        <button class="piano" onclick="window.location.href='piano/index.html'">PIANO</button>
-        <button class="series" onclick="window.location.href='series/index.html'">SERIES</button>
+        <button onclick='window.open("art/index.html")'>ART</button>
+        <button onclick='window.open("botw/index.html")'>BOTW</button>
+        <button onclick='window.open("calendar/index.html")'>CALENDAR</button>
+        <button onclick='window.open("links/index.html")'>LINKS</button>
+        <button onclick='window.open("music/index.html")'>MUSIC</button>
+        <button onclick='window.open("piano/index.html")'>PIANO</button>
+        <button onclick='window.open("series/index.html")'>SERIES</button>
     </div>
 
-    <a class="heart" href="love-function/index.html">♡</a>
+    <a href="love-function/index.html">♡</a>
 </body>
 
 </html>
