--- a/links/index.html
+++ b/links/index.html
@@ -9,62 +9,61 @@
 </head>
 
 <body>
-    <button onclick="window.location.href='https://www.youtube.com/watch?v=ECWg4AglhKI'">
+    <button onclick='window.open("https://www.youtube.com/watch?v=ECWg4AglhKI")'>
         Como Eliminar Carpetas Imposibles De Borrar En Windows SIN PROGRAMAS
     </button>
-    <button onclick="window.location.href='https://www.youtube.com/watch?v=JicAZrsSdmA'">
+    <button onclick='window.open("https://www.youtube.com/watch?v=JicAZrsSdmA")'>
         Piratear Wii | Instalar Homebrew Channel y cIOS de Waninkoko | Hackear Wii sin chip
     </button>
-    <button onclick="window.location.href='https://www.youtube.com/watch?v=Fh1tSKXUNS0'">
+    <button onclick='window.open("https://www.youtube.com/watch?v=Fh1tSKXUNS0")'>
         How To Fix A Semi-Bricked Wii Easily (using AnyRegion Changer)
     </button>
-    <button onclick="window.location.href='https://play.google.com/store/apps/details?id=io.walletpasses.android'">
+    <button onclick='window.open("https://play.google.com/store/apps/details?id=io.walletpasses.android")'>
         WalletPasses | Passbook Wallet (.pkpass reader app)
     </button>
-    <button onclick="window.location.href='https://apod.nasa.gov/apod/archivepix.html'">
+    <button onclick='window.open("https://apod.nasa.gov/apod/archivepix.html")'>
         NASA Astronomy Picture of the Day Archive
     </button>
-    <button onclick="window.location.href='https://www.nasa.gov/multimedia/imagegallery/iotd.html'">
+    <button onclick='window.open("https://www.nasa.gov/multimedia/imagegallery/iotd.html")'>
         NASA Image of the Day
     </button>
-    <button onclick="window.location.href='https://youtube.com/shorts/xnVykQ3x1qU'">
+    <button onclick='window.open("https://youtube.com/shorts/xnVykQ3x1qU")'>
         Google Search Tips
     </button>
-    <button onclick="window.location.href='https://downloads.khinsider.com'">
+    <button onclick='window.open("https://downloads.khinsider.com")'>
         Video Game Music archive
     </button>
-    <button onclick="window.location.href='http://www.falstad.com/qmatom/qmatom.html'">
+    <button onclick='window.open("http://www.falstad.com/qmatom/qmatom.html")'>
         Hydrogen Atom Applet
     </button>
-    <button onclick="window.location.href='https://wii.scenebeta.com'">
+    <button onclick='window.open("https://wii.scenebeta.com")'>
         WiiSceneBeta
     </button>
-    <button onclick="window.location.href='https://vimm.net/vault/Wii'">
+    <button onclick='window.open("https://vimm.net/vault/Wii")'>
         Vimm
     </button>
-    <button onclick="window.location.href='http://www.wiiiso.com'">
+    <button onclick='window.open("http://www.wiiiso.com")'>
         WiiISO
     </button>
-    <button onclick="window.location.href='https://archive.org'">
+    <button onclick='window.open("https://archive.org")'>
         Wayback Machine
     </button>
-    <button onclick="window.location.href='https://archive.org/web'">
+    <button onclick='window.open("https://archive.org/web")'>
         Wayback Machine (Web specific)
     </button>
-    <button onclick="window.location.href='http://nekit.sytes.net/files/gems'">
+    <button onclick='window.open("http://nekit.sytes.net/files/gems")'>
         All Steven Universe Episodes
     </button>
-    <button onclick="window.location.href='https://www.youtube.com/@rwby4k8k'">
+    <button onclick='window.open("https://www.youtube.com/@rwby4k8k")'>
         RWBY 4K/8K
     </button>
-    <button onclick="window.location.href='https://old.reddit.com/'">
+    <button onclick='window.open("https://old.reddit.com/")'>
         Old Reddit
     </button>
-    <button onclick="window.location.href='https://jisho.org/'">
+    <button onclick='window.open("https://jisho.org/")'>
         Japanese-English translator
     </button>
-    <button
-        onclick="window.location.href='https://www.reddit.com/r/Naruto/comments/k2lsxi/ultimate_guide_to_watch_naruto'">
+    <button onclick='window.open("https://www.reddit.com/r/Naruto/comments/k2lsxi/ultimate_guide_to_watch_naruto")'>
         Naruto watching guide
     </button>
 </body>
