--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <div>
-        <button onclick='window.open("art/index.html")'>ART</button>
-        <button onclick='window.open("botw/index.html")'>BOTW</button>
-        <button onclick='window.open("calendar/index.html")'>CALENDAR</button>
-        <button onclick='window.open("links/index.html")'>LINKS</button>
-        <button onclick='window.open("music/index.html")'>MUSIC</button>
-        <button onclick='window.open("piano/index.html")'>PIANO</button>
-        <button onclick='window.open("series/index.html")'>SERIES</button>
+        <button onclick='location.href="art/index.html"'>ART</button>
+        <button onclick='location.href="botw/index.html"'>BOTW</button>
+        <button onclick='location.href="calendar/index.html"'>CALENDAR</button>
+        <button onclick='location.href="links/index.html"'>LINKS</button>
+        <button onclick='location.href="music/index.html"'>MUSIC</button>
+        <button onclick='location.href="piano/index.html"'>PIANO</button>
+        <button onclick='location.href="series/index.html"'>SERIES</button>
     </div>
 
     <a href="love-function/index.html">♡</a>
