--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button onclick='location.href="series/index.html"'>SERIES</button>
     </div>
 
-    <a href="love-function/index.html">♡</a>
+    <button id="love-function" onclick='location.href="love-function/index.html"'>&#10085</button>
 </body>
 
 </html>
