--- a/links/index.html
+++ b/links/index.html
@@ -66,6 +66,9 @@
     <button onclick='window.open("https://www.reddit.com/r/Naruto/comments/k2lsxi/ultimate_guide_to_watch_naruto")'>
         Naruto watching guide
     </button>
+    <button onclick='window.open("https://iorl.org")'>
+        I or l
+    </button>
 </body>
 
 </html>
