--- a/links/index.html
+++ b/links/index.html
@@ -69,6 +69,9 @@
     <button onclick='window.open("https://iorl.org")'>
         I or l
     </button>
+    <button onclick='window.open("https://nitter.net")'>
+        Twitter account viewer
+    </button>
 </body>
 
 </html>
