--- a/links/index.html
+++ b/links/index.html
@@ -72,6 +72,9 @@
     <button onclick='window.open("https://nitter.net")'>
         Twitter account viewer
     </button>
+    <button onclick='window.open("https://ophysics.com/")'>
+        oPhysics
+    </button>
 </body>
 
 </html>
