Added "Quemical Equations online!".

--- a/links/index.html
+++ b/links/index.html
@@ -75,6 +75,9 @@
     <button onclick='window.open("https://ophysics.com/")'>
         oPhysics
     </button>
+    <button onclick='window.open("https://chemequations.com")'>
+        Chemical Equations
+    </button>
 </body>
 
 </html>
