--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
 </head>
 
 <body>
-    <div>
-        <button onclick='location.href="art/index.html"'>ART</button>
-        <button onclick='location.href="botw/index.html"'>BOTW</button>
-        <button onclick='location.href="calendar/index.html"'>CALENDAR</button>
-        <button onclick='location.href="links/index.html"'>LINKS</button>
-        <button onclick='location.href="music/index.html"'>MUSIC</button>
-        <button onclick='location.href="piano/index.html"'>PIANO</button>
-        <button onclick='location.href="series/index.html"'>SERIES</button>
+    <button id="love-function" onclick='location.href="love-function/index.html"'>&#10084</button>
+    <div class="music">
+        <a href="https://music.youtube.com/channel/UCtwW_44fofodl7K_12nXOEg" target="_blank"><img id="song"
+                src="media/music/yes"></a>
+        <a href="https://music.youtube.com/channel/UCEsOqBVe_DNEUAer9TYk6bw" target="_blank"><img id="song"
+                src="media/music/minami"></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="song" src=""></a>
     </div>
-
-    <button id="love-function" onclick='location.href="love-function/index.html"'>&#10085</button>
+    <section class="art">
+        <a href="https://example.com" target="_blank"><img id="picture" src="media/music/yes"></a>
+        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
+        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
+        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
+    </section>
 </body>
 
 </html>
