rearranged animations and cleaned the styles a bit

--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 
 <body>
     <button id="love-function" onclick='location.href="love-function/index.html"'>&#10084</button>
-    <div class="music">
-        <a href="https://music.youtube.com/channel/UCtwW_44fofodl7K_12nXOEg" target="_blank"><img id="song"
+    <div id="music">
+        <a href="https://music.youtube.com/channel/UCtwW_44fofodl7K_12nXOEg" target="_blank"><img id="item"
                 src="media/music/yes"></a>
-        <a href="https://music.youtube.com/channel/UCEsOqBVe_DNEUAer9TYk6bw" target="_blank"><img id="song"
+        <a href="https://music.youtube.com/channel/UCEsOqBVe_DNEUAer9TYk6bw" target="_blank"><img id="item"
                 src="media/music/minami"></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
-        <a href="" target="_blank"><img id="song" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
     </div>
-    <section class="art">
-        <a href="https://example.com" target="_blank"><img id="picture" src="media/music/yes"></a>
-        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
-        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
-        <a href="" target="_blank"><img id="picture" src="media/music/yes"></a>
-    </section>
+    <div id="art">
+        <a href="https://twitter.com/puracotte117/media" target="_blank"><img id="item"
+                src="https://pbs.twimg.com/media/FrBEziFaMAA-Hq4"></a>
+        <a href="https://twitter.com/fufu_060211" target="_blank"><img id="item" src="media/music/yes"></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+        <a href="" target="_blank"><img id="item" src=""></a>
+    </div>
 </body>
 
 </html>
